Fixed the input box and button overlap.

--- a/zeppelin-web/src/app/notebook/notebook.css
+++ b/zeppelin-web/src/app/notebook/notebook.css
@@ -105,7 +105,6 @@
 }
 
 .form-control2 {
-  width: 100%;
   height: 40px;
   font-size: 29px;
   line-height: 1.2;
